# hello-lang-graph

./: .env.template  .gitignore  README.md  pyproject.toml  ruff.toml
data/: income-tax-law-parsed-by-docling.md  income-tax-law-parsed-by-upstage.md
docs/: what-is-docling.md
notebooks/: 01-preprocessing-pdf.ipynb  02-simple-rag-with-langgraph.ipynb  03-rewrite-rag-graph.ipynb  04-self-reflective-rag-graph.ipynb  05-corrective-rag-graph.ipynb  first-langgraph.ipynb
