[project]
name = "hello-lang-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "python-dotenv>=1.1.1",
    "langchain>=0.3.27",
    "langchain-core>=0.3.76",
    "langchain-ollama>=0.3.8",
    "langchain-community>=0.3.29",
    "langgraph>=0.6.7",
    "langchain-docling>=1.1.0",
    "docling>=2.53.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.7",
    "pre-commit>=4.3.0",
    "ruff>=0.13.1",
]


[tool.hatch.build.targets.wheel]
packages = ["src/hello_langgraph"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
